@@ -1,3 +1,7 @@
+2010-01-19  Doug Evans  <dje@sebabeach.org>
+
+	* read.scm (/cmd-include): Fix absolute path handling.
+
 2010-01-05  Doug Evans  <dje@sebabeach.org>
 
 	* mode.scm (<mode>) Rename member non-mode-c-type to c-type.
